<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">English Verbs</string>
  <string name="admin_mod">Admin mode</string>
  <string name="action_settings">Settings</string>
  <string name="word">WORD</string>
  <string name="tense">tense</string>
  <string name="hiscore">HISCORE</string>
  <string name="hiscore_value">0</string>
  <string name="score">SCORE</string>
  <string name="score_value">0</string>
  <string name="title_activity_admin">AdminActivity</string>
  <string name="hello_world">Hello world!</string>
  <string name="admin_present_simple">Present Simple</string>
  <string name="admin_past_simple">Past Simple</string>
  <string name="admin_present_perfect">Present Perfect</string>
  <string name="admin_translation">Translation</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="start_button">Start</string>
  <string name="setting_button">Setting</string>
  <string name="info_button">Info</string>
  <string name="add_to_db">Save</string>
  <string name="title_activity_setting">SettingActivity</string>
  <string name="title_activity_info">InfoActivity</string>
  <string name="info">INFO</string>
  <string name="setting">SETTING</string>

</resources>
